# evolution-world

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: project_docs.md
scripts/demo/: play_simulation.py  play_simulation_mvp0.py  play_simulation_mvp1.py
scripts/train/: train_mvp0.py  train_mvp1.py
src/evolution_world/agents/: __init__.py  random_agent.py  rl_agent.py
src/evolution_world/envs/: grid_world.py  multi_agent.py
src/evolution_world/envs/wrappers/: multi_agent_vec_env.py
src/evolution_world/training/callbacks/: __init__.py  multi_agent_wandb_callback.py  wandb_callback.py
src/evolution_world/training/configs/: config.py  enums.py
src/evolution_world/utils/: __init__.py  logger.py
