[project]
name = "evolution-world"
version = "0.1.0"
description = "A reinforcement learning survival simulation where agents learn to manage food, water, and energy resources in a grid world environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "setuptools<81",
    "stable-baselines3[extra]>=2.7.0",
    "wandb>=0.21.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
