[project]
name = "evolution-world"
version = "0.1.0"
description = "A reinforcement learning survival simulation where agents learn to manage food, water, and energy resources in a grid world environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ernest Knurov", email = "ernestknurov@gmail.com"},
]
license = {text = "MIT"}
keywords = ["reinforcement-learning", "simulation", "survival", "ai", "pygame", "stable-baselines3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "gymnasium>=1.2.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "setuptools<81",
    "stable-baselines3[extra]>=2.7.0",
    "wandb>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/ernestknurov/evolution-world"
Repository = "https://github.com/ernestknurov/evolution-world"
Issues = "https://github.com/ernestknurov/evolution-world/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
